[package]
name = "pca963x"
description = "PCA963x Fm+ I2C-bus LED driver"
version = "0.1.0"
repository = "https://github.com/Atmelfan/pca963x-rs"
authors = ["Atmelfan <gustavp@gpa-robotics.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
bitflags = "1.2"

[dev-dependencies]
linux-embedded-hal = "0.2"
embedded-hal-mock = "0.4"
